mdapipkg/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Annual_Compensation__c</fullName>
        <inlineHelpText>Chapter Specific Requirement field</inlineHelpText>
        <label>Annual Compensation (USD)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <label>Assets (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>At_Large__c</fullName>
        <formula>CONTAINS( Name  , &quot;At Large&quot;)</formula>
        <label>At Large</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Scope__c</fullName>
        <label>Business Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CBMS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVent_ID__c</fullName>
        <description>GUID</description>
        <externalId>true</externalId>
        <label>CVent ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>ALUMCOMM</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainent, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Business and Personal Support</fullName>
                </value>
                <value>
                    <fullName>Business Networks</fullName>
                </value>
                <value>
                    <fullName>Chapter Focused</fullName>
                </value>
                <value>
                    <fullName>Communication/Media</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Couples</fullName>
                </value>
                <value>
                    <fullName>Defense Industries</fullName>
                </value>
                <value>
                    <fullName>Educatioal Services</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Food Services and Drinking Establishment</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>GLC Committee</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>International Board</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Chemical</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Food and Bev</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing - Products</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Network Committee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Area__c</fullName>
        <label>Recruiting Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Dues__c</fullName>
        <description>This field shows if a Chapter collects dues or has collected dues in the past.</description>
        <inlineHelpText>Does YPOI collect dues for Chapter?</inlineHelpText>
        <label>Chapter Dues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Collecting</fullName>
                </value>
                <value>
                    <fullName>New Members only</fullName>
                </value>
                <value>
                    <fullName>Renewing Members only</fullName>
                </value>
                <value>
                    <fullName>All Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Network_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used as a flag for any of the accounts that act as exceptions. This needs to be checked when accounts acts as exception. created as per Item-02897</description>
        <label>Chapter/Network Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Requirements__c</fullName>
        <label>Additional Membership Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Committee_Authority__c</fullName>
        <label>Committee Authority</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Board_Approved__c</fullName>
        <inlineHelpText>For International Committees only</inlineHelpText>
        <label>Date Board Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_CA_training_recorded__c</fullName>
        <description>FOR FUNCTIONAL PURPOSE ONLY</description>
        <label>Date last CA training recorded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Requirements__c</fullName>
        <label>Eligibility Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Members</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Members and Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>YNG</fullName>
                </value>
                <value>
                    <fullName>Members and YNG</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Current_Fiscal_Year__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;6,DATE(YEAR(TODAY())+1,06,30),DATE(YEAR(TODAY()),06,30))</formula>
        <label>End of Current Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Previous_Fiscal_Year__c</fullName>
        <description>Will give you end of previous fiscal year.</description>
        <formula>IF(MONTH(TODAY())&gt;6,DATE(YEAR(TODAY()),06,30),DATE(YEAR(TODAY())-1,06,30))</formula>
        <label>End of Previous Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Email__c</fullName>
        <inlineHelpText>Contact Email address to join this community</inlineHelpText>
        <label>Enrollment Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment_Method__c</fullName>
        <label>Enrollment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Email Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_Net_Worth_Type__c</fullName>
        <label>Enterprise Net Worth Type (USD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net worth of assets before depreciation for your company&apos;s year ending</fullName>
                </value>
                <value>
                    <fullName>Independent third-party investment/valuation for your company&apos;s year ending</fullName>
                </value>
                <value>
                    <fullName>Sum of your company&apos;s public equity value plus its debt less case for the year ending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_Value__c</fullName>
        <label>Enterprise Value (Corporation Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Members__c</fullName>
        <label># Family Members</label>
        <summaryForeignKey>Relationship__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Firm_Type__c</fullName>
        <label>Firm Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private for Profit</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter_Q__c</fullName>
        <description>Stamping the fiscal quarter in form &apos;Q-#&apos; based on todays date.</description>
        <formula>CASE(
MONTH(  TODAY()  ), 
1, &quot;Q-3&quot; , 
2, &quot;Q-3&quot;, 
3, &quot;Q-3&quot;, 
4, &quot;Q-4&quot;, 
5, &quot;Q-4&quot;, 
6, &quot;Q-4&quot;, 
7, &quot;Q-1&quot;, 
8, &quot;Q-1&quot;, 
9, &quot;Q-1&quot;, 
10, &quot;Q-2&quot;, 
11, &quot;Q-2&quot;, 
12, &quot;Q-2&quot;, 
&quot;None&quot;)</formula>
        <label>Fiscal Quarter Q-#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forum_Budget__c</fullName>
        <description>This currency field will be used to house Forum Budget data as it relates to the Accounts object.</description>
        <label>Forum Budget</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forum_Criteria__c</fullName>
        <label>Forum Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forum_Norms__c</fullName>
        <label>Forum Norms?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funds_Available__c</fullName>
        <label>Funds Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Google_Map_of_Address__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp; BillingStreet &amp; &apos;,+&apos; &amp; BillingCity &amp; &apos;,+&apos; &amp; BillingState &amp; &apos;,+&apos; &amp; BillingCountry,&quot;Click to Plot on Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Map of Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Dissolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_in_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Chapter_Inc_Docs_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Chapter Incorporation Documents have been received and uploaded</inlineHelpText>
        <label>Chapter Incorporation Docs Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Integrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Integrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Subsidiary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subsidiary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_TLA_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Trade License Agreement is uploaded and attached to this record</inlineHelpText>
        <label>Trade License Agreement Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__EffectiveDate__c</fullName>
        <description>The date the account became active and contained Assets.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__EnabledCheckoutPaymentTypes__c</fullName>
        <description>Enable the options you would like to make available as payment types to this account. If none are enabled the values from the Site Configuration will be used.</description>
        <inlineHelpText>Enable the options you would like to make available as payment types to this account. If none are enabled the values from the Site Configuration will be used.</inlineHelpText>
        <label>Enabled Checkout Payment Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KGRenewal__VenueCheckoutPaymentTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KGRenewal__IsPendingCheckoutCompletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this Venue created Account has not yet completed checkout.</description>
        <inlineHelpText>If true, this Venue created Account has not yet completed checkout.</inlineHelpText>
        <label>Pending Checkout Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__LastExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <summarizedField>Opportunity.KGRenewal__ContractEndDate__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.KGRenewal__ContractEndDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Pricebook2Id__c</fullName>
        <label>Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Pricebook2Name__c</fullName>
        <label>Pricebook Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Pricebook2Segment__c</fullName>
        <description>The pricing segment that this Account belongs to. This must match the “Segment” value on a Price Book to apply.</description>
        <label>Price Book Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KGRenewal__PriceBookSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KGRenewal__Pricebook2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricebook</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PrimarySubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Subscription</label>
        <referenceTo>KGRenewal__Subscription__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__TaxCustomerUsageCode__c</fullName>
        <label>Tax Customer Usage Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A) Federal government (United States)</fullName>
                </value>
                <value>
                    <fullName>B) State government (United States)</fullName>
                </value>
                <value>
                    <fullName>C) Tribe / Status Indian / Indian Band (both)</fullName>
                </value>
                <value>
                    <fullName>D) Foreign diplomat (both)</fullName>
                </value>
                <value>
                    <fullName>E) Charitable or benevolent org (both)</fullName>
                </value>
                <value>
                    <fullName>F) Religious or educational org (both)</fullName>
                </value>
                <value>
                    <fullName>G) Resale (both)</fullName>
                </value>
                <value>
                    <fullName>H) Commercial agricultural production (both)</fullName>
                </value>
                <value>
                    <fullName>I) Industrial production / manufacturer (both)</fullName>
                </value>
                <value>
                    <fullName>J) Direct pay permit (United States)</fullName>
                </value>
                <value>
                    <fullName>K) Direct mail (United States)</fullName>
                </value>
                <value>
                    <fullName>L) Other (both)</fullName>
                </value>
                <value>
                    <fullName>N) Local government (United States)</fullName>
                </value>
                <value>
                    <fullName>P) Commercial aquaculture (Canada)</fullName>
                </value>
                <value>
                    <fullName>Q) Commercial Fishery (Canada)</fullName>
                </value>
                <value>
                    <fullName>R) Non-resident (Canada)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KGRenewal__TaxExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This account&apos;s opportunities will not have tax calculated.</description>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_New_Member_Kits_To__c</fullName>
        <label>Mail New Member Gifts To?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>Membership Chair</fullName>
                </value>
                <value>
                    <fullName>Chapter Chair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merged_into_Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merged into Chapter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merged Chapters</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Enterprise_Value__c</fullName>
        <inlineHelpText>This is a Chapter-specific requirement</inlineHelpText>
        <label>Min. Enterprise Net Worth (USD)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Network Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network_Focus_Sub_Category__c</fullName>
        <label>Network Focus Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business &gt; Deal Making</fullName>
                </value>
                <value>
                    <fullName>Business &gt; Innovation</fullName>
                </value>
                <value>
                    <fullName>Business &gt; Inside the Industry</fullName>
                </value>
                <value>
                    <fullName>Business &gt; International Business</fullName>
                </value>
                <value>
                    <fullName>Business &gt; Leadership Development</fullName>
                </value>
                <value>
                    <fullName>Business &gt; Strategy &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; Champion Development</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; Chapters</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; Regions</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; Forum Education</fullName>
                </value>
                <value>
                    <fullName>Champion &amp; Membership &gt; International and Regional Governance</fullName>
                </value>
                <value>
                    <fullName>Family &gt; Family</fullName>
                </value>
                <value>
                    <fullName>Family &gt; Parent Child</fullName>
                </value>
                <value>
                    <fullName>Family &gt; Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Family &gt; YNG+ (18-29)</fullName>
                </value>
                <value>
                    <fullName>Family &gt; Youth (Ages 17 and under)</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Arts &amp; Culture</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Food &amp; Wine</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Lifestyle &amp; Identity</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Personal Development</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Sports &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Personal &gt; Travel &amp; Adventure</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Community Outreach</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Public Policy and Diplomacy</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Environment &amp; Wildlife</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Humanitarian Efforts</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Philanthropy</fullName>
                </value>
                <value>
                    <fullName>Social Engagement &gt; Sustainable Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Sub_Network__c</fullName>
        <formula>IF( 
AND( 
RecordType.DeveloperName = &apos;Network&apos;, 
AND( 
NOT(Parent.Name = &apos;&apos;), 
NOT(Parent.Name = &apos;Business&apos;), 
NOT(Parent.Name = &apos;Social&apos;), 
NOT(Parent.Name = &apos;Personal&apos;),
NOT(Parent.Name = &apos;Family&apos;),  
NOT(Parent.Name = &apos;Hidden&apos;))), 
&quot;Sub-Network&quot;, &quot;Network&quot;)</formula>
        <inlineHelpText>Shows if this Network is a Sub-Network or Network.</inlineHelpText>
        <label>Network/Sub-Network?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Member_Status__c</fullName>
        <label>New Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepting New Members</fullName>
                </value>
                <value>
                    <fullName>Accepting Member Referrals Only</fullName>
                </value>
                <value>
                    <fullName>Closed to New Members</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nominee_CventId__c</fullName>
        <externalId>true</externalId>
        <label>Nominee CventId</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nominee_Spouse_CventId__c</fullName>
        <externalId>true</externalId>
        <label>Nominee Spouse CventId</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_Account_Members__c</fullName>
        <label># Account Members</label>
        <summaryForeignKey>Account_Affiliation__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Opportunities__c</fullName>
        <description>Used for populating Opportunity Products</description>
        <label># Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_YPOI_Members__c</fullName>
        <label>Number of Non-YPOI Members</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Won_Opportunities__c</fullName>
        <description>Counts number of won opportunities - used for launching process builder</description>
        <inlineHelpText>Counts number of won opportunities</inlineHelpText>
        <label>Number of Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Won_Prospect_Opportunities__c</fullName>
        <description>Counts number of won prospect opportunities - used for launching process builder</description>
        <inlineHelpText>Counts number of won prospect opportunities</inlineHelpText>
        <label>Number of Won Prospect Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offers_Internships__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offers Internships</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Company__c</fullName>
        <label>Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Description__c</fullName>
        <label>Payment Method Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Canadian Draft</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Domestic Wire</fullName>
                </value>
                <value>
                    <fullName>Foreign Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>President_Type__c</fullName>
        <label>President Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entrepreneur</fullName>
                </value>
                <value>
                    <fullName>Family Business Operator</fullName>
                </value>
                <value>
                    <fullName>Professional Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probation_Begin_Date__c</fullName>
        <label>Probation Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probation_End_Date__c</fullName>
        <label>Probation End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>